# pytorch-iobs

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: iob-tests.yml
iobs/: __init__.py  layers.py  losses.py  models.py  simulators.py
notebooks/: 2-disk.ipynb  MS-COCO.ipynb  s-curve.ipynb
tests/: run.sh  test_layers.py  test_models.py  test_simulators.py
