[metadata]
name = iobs
version = 0.0.0
author = Matthew Ho
author_email = matthew.annam.ho@gmail.com
description = An implementation of Information-Ordered Bottlenecks in PyTorch

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    torch
    numpy
    tqdm